Refactored and added major parts of bot